--- a/FestivalV2/war/WEB-INF/web.xml
+++ b/FestivalV2/war/WEB-INF/web.xml
@@ -4,15 +4,8 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
-	<servlet>
-		<servlet-name>festivalv2</servlet-name>
-		<servlet-class>festivalv2.FestivalV2Servlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>festivalv2</servlet-name>
-		<url-pattern>/festivalv2</url-pattern>
-	</servlet-mapping>
+	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>ccaf.html</welcome-file>
 	</welcome-file-list>
 </web-app>
