--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Festival/war/WEB-INF/classes
 Festival/war/festival
 Festival/war/WEB-INF/appengine-generated/local_db.bin
+FestivalV2/war/WEB-INF/lib/
+Thumbs.db
+
