--- a/FestivalV2/war/WEB-INF/web.xml
+++ b/FestivalV2/war/WEB-INF/web.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
+  http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+>
 	<filter>
 		<filter-name>StripesFilter</filter-name>
-		<display-name>Stripes Filter</display-name>
 		<filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
 		<init-param>
 			<param-name>ActionResolver.Packages</param-name>
-			<param-value>my.action.bean.pkg</param-value>
+			<param-value>festivalv2.action</param-value>
 		</init-param>
+<!-- 	
 		<init-param>
 		    <param-name>MultipartWrapper.Class</param-name>
 	    	<param-value>festivalv2.EmptyWrapper</param-value>
 		</init-param>
+-->
 	</filter>
-	
+<!-- 	
 	<filter-mapping>
 		<filter-name>StripesFilter</filter-name>
 		<url-pattern>*.jsp</url-pattern>
@@ -29,13 +30,22 @@
 		<servlet-name>StripesDispatcher</servlet-name>
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
-
+ -->
+ 
 	<servlet>
 		<servlet-name>StripesDispatcher</servlet-name>
 		<servlet-class>net.sourceforge.stripes.controller.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+ 
+ 
+  <filter-mapping><!-- (4) -->
+    <filter-name>StripesFilter</filter-name>
+    <servlet-name>StripesDispatcher</servlet-name>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
+ 
 	<servlet-mapping>
 		<servlet-name>StripesDispatcher</servlet-name>
 		<url-pattern>*.action</url-pattern>
